# future-little-leaders-sdk-python

./: README.md  pyproject.toml  requirements.txt  verify_import.py  verify_version.py
examples/: school_sync.py  webhook_server.py
fll_sdk/: __init__.py  auth.py  client.py  exceptions.py  models.py  webhooks.py
fll_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: index.py  main.py  requirements.txt
tests/: test_client.py
